--- a/car-back/build.gradle
+++ b/car-back/build.gradle
@@ -16,9 +16,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	compile group: 'org.apache.activemq', name: 'activemq-all', version: '5.4.2'
+	compile group: 'javax.jms', name: 'javax.jms-api', version: '2.0.1'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-
 	}
 	runtime("com.h2database:h2")
 }
